# bevy-rts-sim

./: .gitattributes  .gitignore  Cargo.toml  README.md
assets/shaders/: explosion.wgsl  flipbook.wgsl  health_bar.wgsl  shield.wgsl  shield_bar.wgsl  wfx_additive.wgsl  wfx_smoke_only.wgsl  wfx_smoke_scroll.wgsl
assets/skybox/qwantani_mid_morning_puresky_2k/: diffuse_map.ktx2  skybox.ktx2  specular_map.ktx2
devlogs/: EXPLOSION_SYSTEM.md
docs/: EXPLOSION_SYSTEM.md  PROJECT_OVERVIEW.md  SELECTION_GROUPING.md  SHIELD_SYSTEM.md  TURRETS.md  explosion_system.md  project_overview.md
src/: area_damage.rs  artillery.rs  collision.rs  combat.rs  commander.rs  constants.rs  decals.rs  explosion_shader.rs  explosion_system.rs  formation.rs  ground_explosion.rs  main.rs  math_utils.rs  movement.rs  objective.rs  particles.rs  procedural_meshes.rs  scenario.rs  selection.rs  setup.rs  shield.rs  terrain.rs  terrain_decor.rs  turrets.rs  types.rs  wfx_materials.rs  wfx_spawn.rs
src/scenario/: mod.rs  placement.rs  ui.rs  wave.rs
src/selection/: groups.rs  input.rs  mod.rs  movement.rs  obb.rs  state.rs  ui.rs  utils.rs  visuals.rs
src/selection/visuals/: group.rs  mod.rs  movement.rs  selection.rs
