[package]
name = "bevy-mass-render"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "wav", "tga"] }
bevy_hanabi = "0.12"
rand = "0.8"
bytemuck = { version = "1.12", features = ["derive"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1 