[package]
name = "bevy-mass-render"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "wav", "tga", "png"] }
bevy_hanabi = "0.16"
rand = "0.8"
bytemuck = { version = "1.12", features = ["derive"] }
noise = "0.9"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1 